// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout / AsideLayout aside style overrides 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-19i7kll=""
  >
    <div
      data-css-34rq4a=""
      style={
        Object {
          "overflow": "hidden",
        }
      }
    >
      <div
        style={
          Object {
            "background": "red",
            "height": "50px",
            "width": "700px",
          }
        }
      >
        Fixed width thing
      </div>
    </div>
    <div
      data-css-63wt92=""
    >
      This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout / AsideLayout asidePosition: first 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-19i7kll=""
  >
    <div
      data-css-34rq4a=""
    >
      This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
    </div>
    <div
      data-css-63wt92=""
    >
      This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout / AsideLayout asidePosition: last 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-t8ydvh=""
  >
    <div
      data-css-qxcmpd=""
    >
      This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
    </div>
    <div
      data-css-63wt92=""
    >
      This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout / AsideLayout short aside content 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-19i7kll=""
  >
    <div
      data-css-34rq4a=""
    >
      Very short
    </div>
    <div
      data-css-63wt92=""
    >
      This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout / AsideLayout short main content 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-19i7kll=""
  >
    <div
      data-css-34rq4a=""
    >
      This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
    </div>
    <div
      data-css-63wt92=""
    >
      Very little
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout / AsideLayout wide, fixed aside content 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-19i7kll=""
  >
    <div
      data-css-34rq4a=""
    >
      <div
        style={
          Object {
            "background": "red",
            "height": "50px",
            "width": "700px",
          }
        }
      >
        Fixed width thing
      </div>
    </div>
    <div
      data-css-63wt92=""
    >
      This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout / EqualColumnLayout custom markup 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <ul
    data-css-oo8nrq=""
    style={
      Object {
        "listStyle": "none",
      }
    }
  >
    <li
      data-css-18p75qs=""
    >
      First child
    </li>
    <li
      data-css-18p75qs=""
    >
      Second child
    </li>
    <li
      data-css-18p75qs=""
    >
      Third child
    </li>
    <li
      data-css-18p75qs=""
    >
      Fourth child
    </li>
    <li
      data-css-18p75qs=""
    >
      Fifth child
    </li>
    <li
      data-css-18p75qs=""
    >
      Sixth child
    </li>
  </ul>
</div>
`;

exports[`Storyshots Layout / EqualColumnLayout four 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-oo8nrq=""
  >
    <div
      data-css-18p75qs=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      First child
    </div>
    <div
      data-css-18p75qs=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Second child
    </div>
    <div
      data-css-18p75qs=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Third child
    </div>
    <div
      data-css-18p75qs=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Fourth child
    </div>
    <div
      data-css-18p75qs=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Fifth child
    </div>
    <div
      data-css-18p75qs=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Sixth child
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout / EqualColumnLayout six 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-oo8nrq=""
  >
    <div
      data-css-nvudq=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      First child
    </div>
    <div
      data-css-nvudq=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Second child
    </div>
    <div
      data-css-nvudq=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Third child
    </div>
    <div
      data-css-nvudq=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Fourth child
    </div>
    <div
      data-css-nvudq=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Fifth child
    </div>
    <div
      data-css-nvudq=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Sixth child
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout / EqualColumnLayout three 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-oo8nrq=""
  >
    <div
      data-css-ke1y92=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      First child
    </div>
    <div
      data-css-ke1y92=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Second child
    </div>
    <div
      data-css-ke1y92=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Third child
    </div>
    <div
      data-css-ke1y92=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Fourth child
    </div>
    <div
      data-css-ke1y92=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Fifth child
    </div>
    <div
      data-css-ke1y92=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Sixth child
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout / EqualColumnLayout two 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    data-css-oo8nrq=""
  >
    <div
      data-css-evbaaa=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      First child
    </div>
    <div
      data-css-evbaaa=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Second child
    </div>
    <div
      data-css-evbaaa=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Third child
    </div>
    <div
      data-css-evbaaa=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Fourth child
    </div>
    <div
      data-css-evbaaa=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Fifth child
    </div>
    <div
      data-css-evbaaa=""
      style={
        Object {
          "background": "#E7558B",
        }
      }
    >
      Sixth child
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout / PageHeadingLayout default 1`] = `
<div
  data-css-f5q9fb=""
>
  <div
    data-css-wlfhsa=""
  >
    <h2
      data-css-12103dp=""
    >
      My Page
    </h2>
  </div>
  My content
</div>
`;

exports[`Storyshots Layout / PageHeadingLayout long title 1`] = `
<div
  data-css-f5q9fb=""
>
  <div
    data-css-wlfhsa=""
  >
    <h2
      data-css-12103dp=""
    >
      My page is here and it's long. My page is here and it's long. My page is here and it's long. My page is here and it's long.
    </h2>
  </div>
  My content
</div>
`;

exports[`Storyshots Layout / PageHeadingLayout long title w/ actions 1`] = `
<div
  data-css-f5q9fb=""
>
  <div
    data-css-wlfhsa=""
  >
    <h2
      data-css-12103dp=""
    >
      My page is here and it's long. My page is here and it's long. My page is here and it's long. My page is here and it's long.
    </h2>
    <div
      data-css-1cnar9w=""
    >
      <button
        data-css-176v989=""
        disabled={false}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1ud2sxh=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
    </div>
  </div>
  My content
</div>
`;

exports[`Storyshots Layout / PageHeadingLayout long titlew/ lots of actions 1`] = `
<div
  data-css-f5q9fb=""
>
  <div
    data-css-wlfhsa=""
  >
    <h2
      data-css-12103dp=""
    >
      My page is here and it's long. My page is here and it's long. My page is here and it's long. My page is here and it's long.
    </h2>
    <div
      data-css-1cnar9w=""
    >
      <button
        data-css-176v989=""
        disabled={false}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1ud2sxh=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        data-css-176v989=""
        disabled={false}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1ud2sxh=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        data-css-176v989=""
        disabled={false}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1ud2sxh=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        data-css-176v989=""
        disabled={false}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1ud2sxh=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
    </div>
  </div>
  My content
</div>
`;

exports[`Storyshots Layout / PageHeadingLayout w/ actions 1`] = `
<div
  data-css-f5q9fb=""
>
  <div
    data-css-wlfhsa=""
  >
    <h2
      data-css-12103dp=""
    >
      My Page
    </h2>
    <div
      data-css-1cnar9w=""
    >
      <button
        data-css-176v989=""
        disabled={false}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1ud2sxh=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
    </div>
  </div>
  My content
</div>
`;

exports[`Storyshots Layout / PageHeadingLayout w/ lots of actions 1`] = `
<div
  data-css-f5q9fb=""
>
  <div
    data-css-wlfhsa=""
  >
    <h2
      data-css-12103dp=""
    >
      My Page
    </h2>
    <div
      data-css-1cnar9w=""
    >
      <button
        data-css-176v989=""
        disabled={false}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1ud2sxh=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        data-css-176v989=""
        disabled={false}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1ud2sxh=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        data-css-176v989=""
        disabled={false}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1ud2sxh=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        data-css-176v989=""
        disabled={false}
        style={Object {}}
      >
        <span
          data-css-15b13by=""
        >
          Wow, an action
        </span>
      </button>
      <a
        data-css-1ud2sxh=""
        href="https://duckduckgo.com"
      >
        A link
      </a>
    </div>
  </div>
  My content
</div>
`;

exports[`Storyshots Layout / PageWidthLayout default 1`] = `
<div
  data-css-60rhmp=""
  style={
    Object {
      "color": "white",
      "outline": "1px solid red",
    }
  }
>
  My content
</div>
`;

exports[`Storyshots Layout / PageWidthLayout full-bleed 1`] = `
<div
  style={
    Object {
      "background": "rebeccapurple",
    }
  }
>
  <div
    data-css-60rhmp=""
    style={
      Object {
        "color": "white",
        "outline": "1px solid red",
      }
    }
  >
    My content
  </div>
</div>
`;
